--- a/src/cdn/elements/selections.css
+++ b/src/cdn/elements/selections.css
@@ -7,6 +7,8 @@
   line-height: normal;
   white-space: nowrap;
   cursor: pointer;
+  display: inline-flex;
+  align-items: center;
 }
 
 .checkbox > *,
